gke-apps/manifests/log-output-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-log
          emptyDir: {}
        - name: log-output-config-volume
          configMap:
            name: log-output-config
            items:
              - key: information.txt
                path: information.txt
      containers:
        - name: log-output-writer
          image: kevinjohn971/log-output-writer:3.2
          volumeMounts:
            - name: shared-log
              mountPath: /usr/src/app/files

        - name: log-output-reader
          image: kevinjohn971/log-output-reader:3.2
          volumeMounts:
            - name: shared-log
              mountPath: /usr/src/app/files
            - name: log-output-config-volume
              mountPath: /usr/src/app/config
              readOnly: true
