gke-apps/manifests/log-output-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: exercises
spec:
  type: NodePort
  selector:
    app: log-output
  ports:
    - name: http
      protocol: TCP
      port: 2345
      targetPort: 3000
