gke-apps/manifests/ping-pong-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
  namespace: exercises
spec:
  type: NodePort
  selector:
    app: ping-pong
  ports:
    - name: http
      protocol: TCP
      port: 2345
      targetPort: 3000
